# SysWall

./: .gitignore  Cargo.toml  IDEA.md  README.md  critique_spec.md
config/: default.toml
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/app/src/commands/: mod.rs
crates/app/src/fakes/: fake_audit_repository.rs  fake_connection_monitor.rs  fake_decision_repository.rs  fake_dns_resolver.rs  fake_event_bus.rs  fake_firewall_engine.rs  fake_pending_decision_repository.rs  fake_process_resolver.rs  fake_rule_repository.rs  fake_user_notifier.rs  mod.rs
crates/app/src/services/: audit_service.rs  connection_service.rs  learning_service.rs  mod.rs  pipeline_test.rs  rule_service.rs  whitelist.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: bootstrap.rs  config.rs  main.rs  signals.rs  supervisor.rs
crates/daemon/src/grpc/: control_service.rs  converters.rs  event_service.rs  mod.rs  server.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/entities/: audit.rs  connection.rs  decision.rs  mod.rs  rule.rs
crates/domain/src/errors/: mod.rs
crates/domain/src/events/: mod.rs
crates/domain/src/ports/: messaging.rs  mod.rs  repositories.rs  system.rs
crates/domain/src/services/: mod.rs  policy_engine.rs
crates/domain/src/value_objects/: mod.rs
crates/infra/: Cargo.toml
crates/infra/src/: lib.rs
crates/infra/src/conntrack/: adapter.rs  mod.rs  parser.rs  transformer.rs  types.rs
crates/infra/src/dns/: mod.rs
crates/infra/src/event_bus/: mod.rs
crates/infra/src/nftables/: adapter.rs  command.rs  mod.rs  parser.rs  translator.rs  types.rs
crates/infra/src/persistence/: audit_repository.rs  database.rs  decision_repository.rs  mod.rs  pending_decision_repository.rs  rule_repository.rs
crates/infra/src/process/: cache.rs  icon_resolver.rs  mod.rs  proc_parser.rs  resolver.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/src/: lib.rs
crates/ui/: package-lock.json  package.json
crates/ui/src/: app.css  app.html
crates/ui/src-tauri/: Cargo.toml  tauri.conf.json
crates/ui/src-tauri/src/: grpc_client.rs  lib.rs  streams.rs
crates/ui/src-tauri/src/commands/: decisions.rs  mod.rs  rules.rs  status.rs
crates/ui/src/lib/api/: client.ts
crates/ui/src/lib/components/learning/: DecisionPrompt.svelte
crates/ui/src/lib/components/rules/: RuleForm.svelte
crates/ui/src/lib/components/ui/: Badge.svelte  Button.svelte  Card.svelte  EmptyState.svelte  ErrorBanner.svelte  Input.svelte  LoadingSpinner.svelte  Modal.svelte  Sidebar.svelte  StatCard.svelte  Table.svelte
crates/ui/src/lib/i18n/: fr.ts
crates/ui/src/lib/stores/: audit.ts  connections.ts  dashboard.ts  decisions.ts  rules.ts  status.ts
crates/ui/src/lib/types/: index.ts
crates/ui/src/routes/: +layout.svelte  +page.svelte
crates/ui/src/routes/audit/: +page.svelte
crates/ui/src/routes/connections/: +page.svelte
crates/ui/src/routes/dashboard/: +page.svelte
crates/ui/src/routes/learning/: +page.svelte
crates/ui/src/routes/rules/: +page.svelte
crates/ui/src/routes/settings/: +page.svelte
docs/superpowers/plans/: 2026-03-26-syswall-audit-journal.md  2026-03-26-syswall-firewall-engine.md  2026-03-26-syswall-foundations.md  2026-03-26-syswall-grpc-learning.md  2026-03-26-syswall-premium-ui.md
docs/superpowers/specs/: 2026-03-26-syswall-audit-journal-design.md  2026-03-26-syswall-firewall-engine-design.md  2026-03-26-syswall-foundations-design.md  2026-03-26-syswall-grpc-learning-design.md  2026-03-26-syswall-premium-ui-design.md
proto/: syswall.proto
system/: install.sh  redeploy.sh  syswall-ui.sh  syswall.desktop  syswall.service
