[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/app",
    "crates/infra",
    "crates/proto",
    "crates/daemon",
    "crates/ui/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
pin-project-lite = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"
lru = "0.12"
nix = { version = "0.29", features = ["user", "net", "fs"] }
hyper = { version = "1", features = ["server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = { version = "0.5" }
http = "1"
http-body = "1"
