[package]
name = "syswall-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
syswall-domain = { path = "../domain" }
syswall-app = { path = "../app" }
syswall-infra = { path = "../infra" }
syswall-proto = { path = "../proto" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
nix = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
sd-notify = "0.4"
