[package]
name = "syswall-domain"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
pin-project-lite = { workspace = true }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true }
