[package]
name = "syswall-infra"
version.workspace = true
edition.workspace = true

[dependencies]
syswall-domain = { path = "../domain" }
syswall-app = { path = "../app" }
async-trait = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
