[package]
name = "syswall-infra"
version.workspace = true
edition.workspace = true

[dependencies]
syswall-domain = { path = "../domain" }
syswall-app = { path = "../app" }
async-trait = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
lru = { workspace = true }
nix = { workspace = true }
dirs = "6"

[features]
integration = []

[dev-dependencies]
tokio = { workspace = true }
