[package]
name = "ui"
version = "0.1.0"
description = "SysWall Desktop Firewall UI"
authors = ["you"]
edition = "2021"

[lib]
name = "ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
tower = "0.5"
hyper-util = { version = "0.1", features = ["tokio"] }
http = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

syswall-proto = { path = "../../proto" }
